examples/examples/static_iteration/snapshots/counters_static__tests____test_counters.snap
---
source: examples/examples/counters_static/tests.rs
expression: harness.terminal().backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 20, height: 20 },
    content: [
        "                    ",
        " count: 0           ",
        "                    ",
        "                    ",
        " count: 0           ",
        "                    ",
        "                    ",
        " count: 0           ",
        "                    ",
        "                    ",
        " count: 0           ",
        "                    ",
        "                    ",
        " count: 0           ",
        "                    ",
        "                    ",
        "                    ",
        "                    ",
        "                    ",
        "                    ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 1, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 4, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 7, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 10, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 13, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
